--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Vite React App</title>
+    <script src="https://checkout-sdk.bigcommerce.com/v1/loader.js"></script>
   </head>
   <body>
     <div id="root"></div>
